--- a/templates/about.html
+++ b/templates/about.html
@@ -42,8 +42,8 @@
                 {{ i.extracurricular }}
               </p>
               <div class="resume-buttons d-flex align-items-center justify-content-end mt-3">
-                <a href="{% static 'assets/img/Pratigya_Resume.pdf' %}" target="_blank" class="btn btn-primary me-2">View Resume</a>
-                <a href="{% static 'assets/img/Pratigya_Resume.pdf' %}" download="Pratigya_Resume.pdf" class="btn btn-secondary">Download Resume</a>
+                <a href="{% static 'assets/img/Resume.pdf' %}" target="_blank" class="btn btn-primary me-2">View Resume</a>
+                <a href="{% static 'assets/img/Resume.pdf' %}" download="Resume.pdf" class="btn btn-secondary">Download Resume</a>
             </div>
             </div>
           </div>
