--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
       <span class="typed" data-typed-items="Developer, "></span>
     </p>
     <div class="text-center mt-4">
-      <a href="{% static 'assets/img/Pratigya_resume.pdf' %}" target="_blank" class="btn btn-primary"> Hire Me</a>
+      <a href="{% static 'assets/img/Resume.pdf' %}" target="_blank" class="btn btn-primary"> Hire Me</a>
     </div>
   </div>
 </section>
